sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: value =! is not a member of Int
  while (a=!0) {
          ^